--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-ADMIN_EMAIL_ADDRESS=your_admin_email@example.com
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=YOUR_GOOGLE_MAPS_API_KEY
-EMAIL_FROM_ADDRESS="Law Chambers Contact <noreply@your_domain.com>"
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=YOUR_RECAPTCHA_SITE_KEY
-RECAPTCHA_SECRET_KEY=YOUR_RECAPTCHA_SECRET_KEY
+EMAIL_FROM_ADDRESS="Law Chambers Contact <jayavelsathanantham@gmail.com>"
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6Ldp3zYrAAAAALI8yr7Xep9yRIiTfXEEF4elpCz1
+RECAPTCHA_SECRET_KEY=6Ldp3zYrAAAAACL8FvXLogAr7mJF4ky1UNjouj5R
+ADMIN_EMAIL_ADDRESS=jayavelsathanantham@gmail.com
+MAIL_APP_PASSWORD=pjts renh ssql gzdc
